--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <title>Carolsiya Accessories</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="stylesheets/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -167,21 +166,21 @@
     <section class="container my-6">
         <h2 class="text-center subtitle-line font-weight-bold mb-3"># Instagram</h2>
         <div class="row wow slideInDown">
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-3 scale-hover">
                 <img class="img-fluid " src="images/product-01.png" alt="">
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-3 scale-hover">
                 <img class="img-fluid" src="images/product-02.png" alt="">
             </div>
-            <div class="col-6 col-md-3 mt-2 mt-md-0">
+            <div class="col-6 col-md-3 mt-2 mt-md-0 scale-hover">
                 <img class="img-fluid" src="images/product-03.png" alt="">
             </div>
-            <div class="col-6 col-md-3 mt-2 mt-md-0">
+            <div class="col-6 col-md-3 mt-2 mt-md-0 scale-hover">
                 <img class="img-fluid" src="images/product-04.png" alt="">
             </div>
         </div>
     </section>
-    <footer class="bg-secondary-light pt-4 pb-1 mt-9">
+    <footer class="bg-secondary pt-4 pb-1 mt-9">
         <div class="container">
             <div class="row text-white ml-1 ">
                 <div class="col-sm-6 col-md-4 d-flex flex-column align-items-start mb-2">
@@ -201,14 +200,14 @@
                 <div class="col-sm-12 col-md-4">
                     <span class="h5">FOLLOW US</span>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="text-white mr-1" href=""><i class="fab fa-facebook-square fa-3x"></i></a></li>
-                        <li><a class="text-white mr-1" href=""><i class="fab fa-instagram fa-3x"></i></a></li>
-                        <li><a class="text-white" href=""><i class="fab fa-line fa-3x"></i></a></li>
+                        <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i class="fab fa-facebook-square fa-3x"></i></a></li>
+                        <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i class="fab fa-instagram fa-3x"></i></a></li>
+                        <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a></li>
                     </ul>
                 </div>
             </div>
-            <hr class="border-white">
-            <p class="text-white text-center">copyright © Carolsiya</p>
+            <hr class="border-secondary">
+            <p class="text-secondary text-center">copyright © Carolsiya</p>
 
         </div>
     </footer>
