--- a/product.html
+++ b/product.html
@@ -17,7 +17,6 @@
   <title>Carolsiya Accessories</title>
   <link rel="shortcut icon" href="images/favicon.ico">
   <link rel="stylesheet" href="stylesheets/all.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -91,8 +90,8 @@
           </div>
           <div class="col-md-6 mt-2 mt-md-0">
             <span>40418041</span>
-            <h1 class="h2">璀璨女主角。針式耳環+多環戒</h1>
-            <a href="" class="btn btn-primary-dark btn-sm rounded-pill mt-1 mb-2">春季期間限定活動 >></a>
+            <h1 class="h2 text-secondary-dark">璀璨女主角。針式耳環+多環戒</h1>
+            <a href="" class="btn btn-primary-dark btn-sm rounded-pill mt-1 mb-2">春季期間限定9折 >></a>
             <span class="d-block text-secondary">原價 <del>NT$ 780</del></span>
             <span class="text-danger text-right d-block">活動價$ <strong class="h1 font-weight-bold">690</strong></span>
             <form action="">
@@ -116,7 +115,7 @@
                   <a href="" class="btn btn-secondary w-100 btn-lg">立即購買</a>
                 </div>
                 <div class="col-6">
-                  <a href="" class="btn btn-primary-dark w-100 btn-lg">加入購物車</a>
+                  <a href="" class="btn btn-danger w-100 btn-lg">加入購物車</a>
                 </div>
               </div>
             </form>
@@ -165,7 +164,7 @@
       </section>
     </div>
   </div>
-  <footer class="bg-secondary-light pt-4 pb-1 mt-9">
+  <footer class="bg-secondary pt-4 pb-1 mt-9">
     <div class="container">
       <div class="row text-white ml-1 ">
         <div class="col-sm-6 col-md-4 d-flex flex-column align-items-start mb-2">
@@ -185,14 +184,16 @@
         <div class="col-sm-12 col-md-4">
           <span class="h5">FOLLOW US</span>
           <ul class="list-unstyled d-flex">
-            <li><a class="text-white mr-1" href=""><i class="fab fa-facebook-square fa-3x"></i></a></li>
-            <li><a class="text-white mr-1" href=""><i class="fab fa-instagram fa-3x"></i></a></li>
-            <li><a class="text-white" href=""><i class="fab fa-line fa-3x"></i></a></li>
+            <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i
+                  class="fab fa-facebook-square fa-3x"></i></a></li>
+            <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i class="fab fa-instagram fa-3x"></i></a>
+            </li>
+            <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a></li>
           </ul>
         </div>
       </div>
-      <hr class="border-white">
-      <p class="text-white text-center">copyright © Carolsiya</p>
+      <hr class="border-secondary">
+      <p class="text-secondary text-center">copyright © Carolsiya</p>
 
     </div>
   </footer>
