--- a/brand-2.html
+++ b/brand-2.html
@@ -17,7 +17,6 @@
     <title>Carolsiya Accessories</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="stylesheets/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -76,7 +75,7 @@
         </div>
     </header><!-- /header -->
     <div class="wrapper">
-        <div class="container-fluid">
+        <div>
             <div class="bannerfixed bannerfixed-2nd d-flex justify-content-center align-items-center">
                 <h1 class="text-hide brand-logo-2nd">REGALAN</h1>
             </div>
@@ -93,18 +92,26 @@
         <!-- section1 -->
         <section class="container">
             <div class="row">
-                <div class="col-md-6 m-auto">
+                <div class="col-md-6 m-auto text-secondary-dark">
                     <p>每天戴上首飾的那刻，都是一種怦然心動，想要一直佩戴在身上的個人日常風格首飾，陪妳度過，
                         展現生活中的每個感受，因為我們認為飾品是一種生活態度，就像是衣服一樣，是我們每天必備的穿著，ZALATO妝點的不是配件，而是每個女孩的日常。
                     </p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, aliquid assumenda voluptate architecto unde, aspernatur odio modi nisi illo commodi laboriosam nobis quia! Mollitia impedit, laudantium debitis explicabo soluta ipsa sunt exercitationem totam magnam nobis blanditiis, odio ratione maxime rem ex quod porro magni distinctio libero placeat accusantium dicta sequi numquam? A consequuntur impedit distinctio, tenetur dignissimos nostrum ad voluptates, accusamus magni eos omnis, aliquam vitae expedita! Minima vero libero illo dolor quae dignissimos! Provident voluptatum, eos ex fuga quas inventore ipsam quam facilis sit accusamus accusantium vero, quia laudantium a ut aliquam pariatur dolorum voluptates ullam beatae. Voluptatibus, quos?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, aliquid assumenda voluptate
+                        architecto unde, aspernatur odio modi nisi illo commodi laboriosam nobis quia! Mollitia impedit,
+                        laudantium debitis explicabo soluta ipsa sunt exercitationem totam magnam nobis blanditiis, odio
+                        ratione maxime rem ex quod porro magni distinctio libero placeat accusantium dicta sequi
+                        numquam? A consequuntur impedit distinctio, tenetur dignissimos nostrum ad voluptates, accusamus
+                        magni eos omnis, aliquam vitae expedita! Minima vero libero illo dolor quae dignissimos!
+                        Provident voluptatum, eos ex fuga quas inventore ipsam quam facilis sit accusamus accusantium
+                        vero, quia laudantium a ut aliquam pariatur dolorum voluptates ullam beatae. Voluptatibus, quos?
+                    </p>
                 </div>
             </div>
 
         </section>
 
     </div>
-    <footer class="bg-secondary-light pt-4 pb-1 mt-9">
+    <footer class="bg-secondary pt-4 pb-1 mt-9">
         <div class="container">
             <div class="row text-white ml-1 ">
                 <div class="col-sm-6 col-md-4 d-flex flex-column align-items-start mb-2">
@@ -124,14 +131,18 @@
                 <div class="col-sm-12 col-md-4">
                     <span class="h5">FOLLOW US</span>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="text-white mr-1" href=""><i class="fab fa-facebook-square fa-3x"></i></a></li>
-                        <li><a class="text-white mr-1" href=""><i class="fab fa-instagram fa-3x"></i></a></li>
-                        <li><a class="text-white" href=""><i class="fab fa-fa-line fa-3x"></i></a></li>
+                        <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i
+                                    class="fab fa-facebook-square fa-3x"></i></a></li>
+                        <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i
+                                    class="fab fa-instagram fa-3x"></i></a></li>
+                        <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <hr class="border-white">
-            <p class="text-white text-center">copyright © Carolsiya</p>
+            <hr class="border-secondary">
+            <p class="text-secondary text-center">copyright © Carolsiya</p>
+
         </div>
     </footer>
     <!-- login modal -->
