--- a/collection.html
+++ b/collection.html
@@ -17,7 +17,6 @@
   <title>Carolsiya Accessories</title>
   <link rel="shortcut icon" href="images/favicon.ico">
   <link rel="stylesheet" href="stylesheets/all.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -113,10 +112,10 @@
           <div class="tab-pane fade show active" id="list-all" role="tabpanel" aria-labelledby="list-all-list">
             <div class="row">
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="product.html">
                     <img src="images/product-01.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">璀璨女主角。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -128,10 +127,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-02.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">璀璨女主角。針式耳環+多環戒</span>
                       <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$ 690</strong></span>
                     </p>
@@ -143,10 +142,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-03.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">璀璨女主角。多環戒</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -158,10 +157,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-04.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -173,10 +172,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-05.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。針式耳環+指環戒</span>
                       <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$ 690</strong></span>
                     </p>
@@ -188,10 +187,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-06.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。指環戒</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -203,10 +202,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-07.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">午夜紅唇。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -218,10 +217,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-08.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">甜莓寵愛。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -233,10 +232,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-09.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">騎士信仰。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -253,10 +252,10 @@
           <div class="tab-pane fade" id="list-hot" role="tabpanel" aria-labelledby="list-hot-list">
             <div class="row">
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-04.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -268,10 +267,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-05.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。針式耳環+指環戒</span>
                       <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$ 690</strong></span>
                     </p>
@@ -283,10 +282,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-06.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。指環戒</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -298,10 +297,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-07.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">午夜紅唇。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -313,10 +312,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-08.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">甜莓寵愛。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -328,10 +327,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-09.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">騎士信仰。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -348,10 +347,10 @@
           <div class="tab-pane fade" id="list-new" role="tabpanel" aria-labelledby="list-new-list">
             <div class="row">
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-07.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">午夜紅唇。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -363,10 +362,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-08.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">甜莓寵愛。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -378,10 +377,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-09.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">騎士信仰。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -393,10 +392,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-07.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">午夜紅唇。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -408,10 +407,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-08.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">甜莓寵愛。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -423,10 +422,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-09.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">騎士信仰。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -443,10 +442,10 @@
           <div class="tab-pane fade" id="list-event" role="tabpanel" aria-labelledby="list-event-list">
             <div class="row">
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="product.html">
                     <img src="images/product-01.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">璀璨女主角。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -458,10 +457,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-02.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">璀璨女主角。針式耳環+多環戒</span>
                       <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$ 690</strong></span>
                     </p>
@@ -473,10 +472,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-03.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">璀璨女主角。多環戒</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -488,10 +487,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-04.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。針式耳環</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -503,10 +502,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-05.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。針式耳環+指環戒</span>
                       <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$ 690</strong></span>
                     </p>
@@ -518,10 +517,10 @@
                 </div>
               </div>
               <div class="col-6 col-md-4 col-lg-3">
-                <div class="heart-icon-wrap">
+                <div class="heart-icon-wrap scale-hover">
                   <a class="" href="#">
                     <img src="images/product-06.png" alt="" class="img-fluid">
-                    <p class="text-secondary-dark h5">
+                    <p class="text-secondary-dark h6 scale-hover-text">
                       <span class="d-block my-1">幻象之境。指環戒</span>
                       <span><strong class="font-weight-bold">NT$ 390</strong></span>
                     </p>
@@ -555,7 +554,7 @@
       </section>
     </section>
   </div>
-  <footer class="bg-secondary-light pt-4 pb-1 mt-9">
+  <footer class="bg-secondary pt-4 pb-1 mt-9">
     <div class="container">
       <div class="row text-white ml-1 ">
         <div class="col-sm-6 col-md-4 d-flex flex-column align-items-start mb-2">
@@ -575,14 +574,16 @@
         <div class="col-sm-12 col-md-4">
           <span class="h5">FOLLOW US</span>
           <ul class="list-unstyled d-flex">
-            <li><a class="text-white mr-1" href=""><i class="fab fa-facebook-square fa-3x"></i></a></li>
-            <li><a class="text-white mr-1" href=""><i class="fab fa-instagram fa-3x"></i></a></li>
-            <li><a class="text-white" href=""><i class="fab fa-line fa-3x"></i></a></li>
+            <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i
+                  class="fab fa-facebook-square fa-3x"></i></a></li>
+            <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i class="fab fa-instagram fa-3x"></i></a>
+            </li>
+            <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a></li>
           </ul>
         </div>
       </div>
-      <hr class="border-white">
-      <p class="text-white text-center">copyright © Carolsiya</p>
+      <hr class="border-secondary">
+      <p class="text-secondary text-center">copyright © Carolsiya</p>
 
     </div>
   </footer>
