--- a/event.html
+++ b/event.html
@@ -17,7 +17,6 @@
     <title>Carolsiya Accessories</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="stylesheets/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+TC:400,700" rel="stylesheet">
 </head>
 
 <body>
@@ -110,27 +109,27 @@
             </div>
             <div class="row">
                 <div class="col-6 col-md-4">
-                    <a class="link-hover" href="#">
+                    <a class="scale-hover d-inline-block" href="#">
                         <img src="images/product-01.png" alt="" class="img-fluid">
-                        <p class="text-secondary-dark h5">
+                        <p class="text-secondary-dark h5 scale-hover-text">
                             <span class="d-block my-1">璀璨女主角。針式耳環</span>
                             <span><strong class="font-weight-bold">NT$ 390</strong></span>
                         </p>
                     </a>
                 </div>
                 <div class="col-6 col-md-4">
-                    <a class="" href="#">
+                    <a class="scale-hover d-inline-block" href="#">
                         <img src="images/product-03.png" alt="" class="img-fluid">
-                        <p class="text-secondary-dark h5">
+                        <p class="text-secondary-dark h5 scale-hover-text">
                             <span class="d-block my-1">璀璨女主角。多環戒</span>
                             <span><strong class="font-weight-bold">NT$ 390</strong></span>
                         </p>
                     </a>
                 </div>
                 <div class="col-6 col-md-4">
-                    <a class="" href="#">
+                    <a class="scale-hover d-inline-block" href="#">
                         <img src="images/product-02.png" alt="" class="img-fluid">
-                        <p class="text-secondary-dark h5">
+                        <p class="text-secondary-dark h5 scale-hover-text">
                             <span class="d-block my-1">璀璨女主角。針式耳環+多環戒</span>
                             <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$
                                     690</strong></span>
@@ -138,7 +137,7 @@
                     </a>
                 </div>
                 <div class="col text-center my-5">
-                    <a href="collection.html" class="btn btn-secondary-light btn-lg text-white breath">more</a>
+                    <a href="collection.html" class="btn btn-secondary btn-lg text-white  scale-hover">more</a>
                 </div>
             </div>
         </section>
@@ -167,27 +166,27 @@
             </div>
             <div class="row">
                 <div class="col-6 col-md-4">
-                    <a class="" href="#">
+                    <a class="scale-hover d-inline-block" href="#">
                         <img src="images/product-04.png" alt="" class="img-fluid">
-                        <p class="text-secondary-dark h5">
+                        <p class="text-secondary-dark h5 scale-hover-text">
                             <span class="d-block my-1">璀璨女主角。針式耳環</span>
                             <span><strong class="font-weight-bold">NT$ 390</strong></span>
                         </p>
                     </a>
                 </div>
                 <div class="col-6 col-md-4">
-                    <a class="" href="#">
+                    <a class="scale-hover d-inline-block" href="#">
                         <img src="images/product-05.png" alt="" class="img-fluid">
-                        <p class="text-secondary-dark h5">
+                        <p class="text-secondary-dark h5 scale-hover-text">
                             <span class="d-block my-1">璀璨女主角。多環戒</span>
                             <span><strong class="font-weight-bold">NT$ 390</strong></span>
                         </p>
                     </a>
                 </div>
                 <div class="col-6 col-md-4">
-                    <a class="" href="#">
+                    <a class="scale-hover d-inline-block" href="#">
                         <img src="images/product-06.png" alt="" class="img-fluid">
-                        <p class="text-secondary-dark h5">
+                        <p class="text-secondary-dark h5 scale-hover-text">
                             <span class="d-block my-1">璀璨女主角。針式耳環+多環戒</span>
                             <span><del>NT$ 780</del> 活動價 <strong class="font-weight-bold">NT$
                                     690</strong></span>
@@ -195,7 +194,7 @@
                     </a>
                 </div>
                 <div class="col text-center my-5">
-                    <a href="collection.html" class="btn btn-secondary-light btn-lg text-white breath">more</a>
+                    <a href="collection.html" class="btn btn-secondary btn-lg text-white  scale-hover">more</a>
                 </div>
             </div>
         </section>
@@ -211,7 +210,7 @@
                     </div>
                     <p class=" mt-3 text-secondary">我是天空裡的一片雲, <br>偶爾投影在你的波心 ──<br>你不必訝異,<br>更無須歡喜 ──
                         <br>在轉瞬間消滅了蹤影.</p>
-                    <div class="h5">
+                    <div class="h5 text-secondary-dark">
                         <span class="d-block mb-2">迷情典藏。針式耳環</span>
                         <span class="font-weight-bold">NT$ 390</span>
                     </div>
@@ -219,7 +218,7 @@
             </div>
         </section>
     </div>
-    <footer class="bg-secondary-light pt-4 pb-1 mt-9">
+    <footer class="bg-secondary pt-4 pb-1 mt-9">
         <div class="container">
             <div class="row text-white ml-1 ">
                 <div class="col-sm-6 col-md-4 d-flex flex-column align-items-start mb-2">
@@ -239,14 +238,18 @@
                 <div class="col-sm-12 col-md-4">
                     <span class="h5">FOLLOW US</span>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="text-white mr-1" href=""><i class="fab fa-facebook-square fa-3x"></i></a></li>
-                        <li><a class="text-white mr-1" href=""><i class="fab fa-instagram fa-3x"></i></a></li>
-                        <li><a class="text-white" href=""><i class="fab fa-line fa-3x"></i></a></li>
+                        <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i
+                                    class="fab fa-facebook-square fa-3x"></i></a></li>
+                        <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i
+                                    class="fab fa-instagram fa-3x"></i></a></li>
+                        <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <hr class="border-white">
-            <p class="text-white text-center">copyright © Carolsiya</p>
+            <hr class="border-secondary">
+            <p class="text-secondary text-center">copyright © Carolsiya</p>
+
         </div>
     </footer>
     <!-- login modal -->
