--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
 
                 </div>
-                <a href="#" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
                 <a href="#" title="會員登入" class="order-4" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user fa-2x"></i></a>
             </nav>
@@ -129,7 +129,7 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="col-md-6 d-flex justify-content-center wow fadeInLeft">
+            <div class="col-md-6 d-flex justify-content-center wow fadeInLeft float-top-hover">
                 <div>
                     <img src="images/acc-green-1.png" alt="" class="img-fluid shadow">
                 </div>
@@ -137,45 +137,45 @@
             <div class="col-md-6 d-flex justify-content-center align-items-center my-5 my-md-0">
                 <div>
                     <img src="images/t_fantasy.svg" alt="">
-                    <p class="text-secondary mt-16 ml-5">我是天空裏的一片雲，<br>偶然投影在你的波心──<br>你不必訝異，<br>更無須歡喜──<br>在轉瞬間消滅了蹤影。
+                    <p class="text-secondary mt-16 ml-5 text-hover">我是天空裏的一片雲，<br>偶然投影在你的波心──<br>你不必訝異，<br>更無須歡喜──<br>在轉瞬間消滅了蹤影。
                     </p>
                 </div>
             </div>
         </div>
         <div class="row bg-decorative-border">
-            <div class="col-md-6 order-md-2 d-flex justify-content-center wow fadeInRight">
-                <div class="">
+            <div class="col-md-6 order-md-2 d-flex justify-content-center wow fadeInRight float-top-hover">
+                <div>
                     <img src="images/acc-green-2.png" alt="" class="img-fluid shadow">
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center my-5 my-md-0 pl-lg-9">
-                <p class="text-secondary">你我相逢在黑夜的海上，<br>你有你的，我有我的，方向；<br>你記得也好，<br>最好你忘掉，<br>在這交會時互放的光亮！</p>
+                <p class="text-secondary text-hover">你我相逢在黑夜的海上，<br>你有你的，我有我的，方向；<br>你記得也好，<br>最好你忘掉，<br>在這交會時互放的光亮！</p>
             </div>
         </div>
         <div class="row bg-decorative-border">
-            <div class="col-md-6 d-flex justify-content-center wow fadeInLeft">
-                <div class="">
+            <div class="col-md-6 d-flex justify-content-center wow fadeInLeft float-top-hover">
+                <div>
                     <img src="images/acc-green-3.png" alt="" class="img-fluid shadow">
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center my-5 my-md-0 pr-lg-9">
-                <p class="text-secondary">剛忘了昨兒的夢，<br>又分明看見夢裡的一笑。<br>我不知道風，是在那一個方向吹──<br>我是在夢中，<br>甜美是夢裏的光輝。</p>
+                <p class="text-secondary text-hover">剛忘了昨兒的夢，<br>又分明看見夢裡的一笑。<br>我不知道風，是在那一個方向吹──<br>我是在夢中，<br>甜美是夢裏的光輝。</p>
             </div>
         </div>
     </section>
     <section class="container my-6">
         <h2 class="text-center subtitle-line font-weight-bold mb-3"># Instagram</h2>
         <div class="row wow slideInDown">
-            <div class="col-6 col-md-3 scale-hover">
-                <img class="img-fluid " src="images/product-01.png" alt="">
+            <div class="col-6 col-md-3 scale-hover py-1">
+                <img class="img-fluid" src="images/product-01.png" alt="">
             </div>
-            <div class="col-6 col-md-3 scale-hover">
+            <div class="col-6 col-md-3 scale-hover py-1">
                 <img class="img-fluid" src="images/product-02.png" alt="">
             </div>
-            <div class="col-6 col-md-3 mt-2 mt-md-0 scale-hover">
+            <div class="col-6 col-md-3 scale-hover py-1">
                 <img class="img-fluid" src="images/product-03.png" alt="">
             </div>
-            <div class="col-6 col-md-3 mt-2 mt-md-0 scale-hover">
+            <div class="col-6 col-md-3 scale-hover py-1">
                 <img class="img-fluid" src="images/product-04.png" alt="">
             </div>
         </div>
@@ -212,6 +212,7 @@
         </div>
     </footer>
 
+    <a href="" class="gotop" id="gotop" title="回頂部"></a>
 
 
     <!-- login modal -->
