--- a/brand-2.html
+++ b/brand-2.html
@@ -68,14 +68,14 @@
                     </div>
 
                 </div>
-                <a href="#" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
                 <a href="#" title="會員登入" class="order-4" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user fa-2x"></i></a>
             </nav>
         </div>
     </header><!-- /header -->
     <div class="wrapper">
-        <div>
+        <div class="container-fluid">
             <div class="bannerfixed bannerfixed-2nd d-flex justify-content-center align-items-center">
                 <h1 class="text-hide brand-logo-2nd">REGALAN</h1>
             </div>
@@ -145,6 +145,11 @@
 
         </div>
     </footer>
+
+    <a href="" class="gotop" id="gotop" title="回頂部"></a>
+
+
+
     <!-- login modal -->
     <div class="modal fade bd-example-modal-lg" id="loginModal" tabindex="-1" role="dialog"
         aria-labelledby="myLargeModalLabel" aria-hidden="true">
