--- a/checkout-2.html
+++ b/checkout-2.html
@@ -74,43 +74,125 @@
             </nav>
         </div>
     </header><!-- /header -->
-    <div class="wrapper">
-        <div class="container-fluid">
-            <div class="bannerfixed bannerfixed-1st d-flex justify-content-center align-items-center">
-                <h1 class="text-hide brand-logo-1st">ZALATO</h1>
-            </div>
+
+    <section class="container">
+        <h1 class="h5 mt-1 d-md-none">配送與付款</h1>
+        <div class="d-none d-md-block">
+            <ul class="stepbar d-flex list-unstyled justify-content-between mx-auto my-4">
+                <li class="step">1<span class="step-text">確認購物車</span></li>
+                <li class="step active">2<span class="step-text">配送與付款</span></li>
+                <li class="step">3<span class="step-text">填寫資料</span></li>
+                <li class="step">4<span class="step-text">訂購完成</span></li>
+            </ul>
         </div>
-        <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb bg-transparent">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">brand</li>
-                    <li class="breadcrumb-item active" aria-current="page">ZALATO</li>
-                </ol>
-            </nav>
-        </div>
-        <!-- section1 -->
-        <section class="container">
-            <div class="row">
-                <div class="col-md-6 m-auto text-secondary-dark">
-                    <p>每天戴上首飾的那刻，都是一種怦然心動，想要一直佩戴在身上的個人日常風格首飾，陪妳度過，
-                        展現生活中的每個感受，因為我們認為飾品是一種生活態度，就像是衣服一樣，是我們每天必備的穿著，ZALATO妝點的不是配件，而是每個女孩的日常。
-                    </p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, aliquid assumenda voluptate
-                        architecto unde, aspernatur odio modi nisi illo commodi laboriosam nobis quia! Mollitia impedit,
-                        laudantium debitis explicabo soluta ipsa sunt exercitationem totam magnam nobis blanditiis, odio
-                        ratione maxime rem ex quod porro magni distinctio libero placeat accusantium dicta sequi
-                        numquam? A consequuntur impedit distinctio, tenetur dignissimos nostrum ad voluptates, accusamus
-                        magni eos omnis, aliquam vitae expedita! Minima vero libero illo dolor quae dignissimos!
-                        Provident voluptatum, eos ex fuga quas inventore ipsam quam facilis sit accusamus accusantium
-                        vero, quia laudantium a ut aliquam pariatur dolorum voluptates ullam beatae. Voluptatibus, quos?
-                    </p>
+    </section>
+    <!-- checkout -->
+    <section class="container">
+        <!-- 選單 -->
+        <section class="row border d-flex flex-column no-gutters">
+            <div class="col my-1 px-md-2">
+                <div class="row">
+                    <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                value="option1" checked>
+                            <label class="form-check-label" for="exampleRadios1">
+                                7-11取貨付款
+                            </label>
+                        </div>
+                        <span class="ml-2">滿<strong class="text-danger">$1000</strong>免運</span>
+                    </div>
+                    <div class="col-2 d-flex justify-content-center align-items-center">
+                        <span>$60</span>
+                    </div>
                 </div>
             </div>
-
+            <div class="col my-1 px-md-2">
+                <div class="row">
+                    <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                                value="option2">
+                            <label class="form-check-label" for="exampleRadios2">
+                                全家取貨付款
+                            </label>
+                        </div>
+                        <span class="ml-2">滿<strong class="text-danger">$1000</strong>免運</span>
+                    </div>
+                    <div class="col-2 d-flex justify-content-center align-items-center">
+                        <span>$60</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-1 px-md-2">
+                <div class="row">
+                    <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                                value="option3">
+                            <label class="form-check-label" for="exampleRadios3">
+                                信用卡付款
+                            </label>
+                        </div>
+                        <span class="ml-2">滿<strong class="text-danger">$1500</strong>免運</span>
+                    </div>
+                    <div class="col-2 d-flex justify-content-center align-items-center">
+                        <span>$60</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col my-1 px-md-2">
+                <div class="row">
+                    <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadio4"
+                                value="option4">
+                            <label class="form-check-label" for="exampleRadios4">
+                                宅配貨到付款
+                            </label>
+                        </div>
+                        <span class="ml-2">滿<strong class="text-danger">$1500</strong>免運</span>
+                    </div>
+                    <div class="col-2 d-flex justify-content-center align-items-center">
+                        <span>$60</span>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- 小計 -->
+        <section class="bg-secondary-lighter p-2">
+            <div class="row text-secondary-dark">
+                <div class="col-md-8 text-md-right">
+                    <span>共<strong class="text-danger mx-1">1</strong>件</span>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-12 d-flex justify-content-between mb-1">
+                            <span class="d-block">商品金額</span>
+                            <span class="d-block">$1380</span>
+                        </div>
+                        <div class="col-12 d-flex justify-content-between mb-1">
+                            <span class="d-block">運費小計</span>
+                            <span class="d-block">$0</span>
+                        </div>
+                        <div class="col-12 d-flex justify-content-between border-top pt-1">
+                            <span class="font-weight-bold d-block">總計</span>
+                            <span class="text-danger font-weight-bold h5 d-block"><strong>$1380</strong></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- 按鈕 -->
+        <section class="d-flex justify-content-between mt-md-1">
+            <a href="checkout-1.html" class="btn btn-primary checkout-btn">＜ 返回購物車</a>
+            <a href="checkout-3.html" class="btn btn-primary-darker checkout-btn">下一步 ＞</a>
+        </section>
+    </section>
 
-    </div>
+
+
+
     <footer class="bg-secondary pt-4 pb-1 mt-9">
         <div class="container">
             <div class="row text-white ml-1 ">
@@ -145,10 +227,6 @@
 
         </div>
     </footer>
-
-    <a href="" class="gotop" id="gotop" title="回頂部"></a>
-
-
     <!-- login modal -->
     <div class="modal fade bd-example-modal-lg" id="loginModal" tabindex="-1" role="dialog"
         aria-labelledby="myLargeModalLabel" aria-hidden="true">
