--- a/checkout-4.html
+++ b/checkout-4.html
@@ -74,43 +74,44 @@
             </nav>
         </div>
     </header><!-- /header -->
-    <div class="wrapper">
-        <div class="container-fluid">
-            <div class="bannerfixed bannerfixed-1st d-flex justify-content-center align-items-center">
-                <h1 class="text-hide brand-logo-1st">ZALATO</h1>
-            </div>
-        </div>
-        <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb bg-transparent">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">brand</li>
-                    <li class="breadcrumb-item active" aria-current="page">ZALATO</li>
-                </ol>
-            </nav>
-        </div>
-        <!-- section1 -->
-        <section class="container">
-            <div class="row">
-                <div class="col-md-6 m-auto text-secondary-dark">
-                    <p>每天戴上首飾的那刻，都是一種怦然心動，想要一直佩戴在身上的個人日常風格首飾，陪妳度過，
-                        展現生活中的每個感受，因為我們認為飾品是一種生活態度，就像是衣服一樣，是我們每天必備的穿著，ZALATO妝點的不是配件，而是每個女孩的日常。
-                    </p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, aliquid assumenda voluptate
-                        architecto unde, aspernatur odio modi nisi illo commodi laboriosam nobis quia! Mollitia impedit,
-                        laudantium debitis explicabo soluta ipsa sunt exercitationem totam magnam nobis blanditiis, odio
-                        ratione maxime rem ex quod porro magni distinctio libero placeat accusantium dicta sequi
-                        numquam? A consequuntur impedit distinctio, tenetur dignissimos nostrum ad voluptates, accusamus
-                        magni eos omnis, aliquam vitae expedita! Minima vero libero illo dolor quae dignissimos!
-                        Provident voluptatum, eos ex fuga quas inventore ipsam quam facilis sit accusamus accusantium
-                        vero, quia laudantium a ut aliquam pariatur dolorum voluptates ullam beatae. Voluptatibus, quos?
-                    </p>
-                </div>
-            </div>
 
+    <section class="container">
+        <h1 class="h5 mt-1 d-md-none">訂購完成</h1>
+        <div class="d-none d-md-block">
+            <ul class="stepbar d-flex list-unstyled justify-content-between mx-auto my-4">
+                <li class="step">1<span class="step-text">確認購物車</span></li>
+                <li class="step">2<span class="step-text">配送與付款</span></li>
+                <li class="step">3<span class="step-text">填寫資料</span></li>
+                <li class="step active">4<span class="step-text">訂購完成</span></li>
+            </ul>
+        </div>
+    </section>
+    <!-- checkout -->
+    <section class="container">
+        <div class="row no-gutters">
+            <div class="col-md-6 border mx-auto p-2">
+                <div class="text-center">
+                    <h2 class="h5 text-success font-weight-bold"><i
+                            class="far fa-check-circle fa-6x d-block mb-2"></i>訂單已成立!</h2>
+                    <p class="text-secondary-dark font-weight-bold h5">訂單編號：1904260001092</p>
+                </div>
+                <h5 class="mt-3 h6">【 感謝您的惠顧 】</h5>
+                <ol>
+                    <li>本店僅提供台灣本島寄送服務(不接受郵政信箱)，確認付款完成後我們將於1~4日內將商品寄送到您的收貨地址。</li>
+                    <li>詐騙猖獗，本店絕不會另外通知消費者交易失敗或付款錯誤等，要您去提款機操作任何取消交易或轉帳的動作，請小心不要受騙。</li>
+                </ol>
+            </div>
+        </div>
+        <!-- 按鈕 -->
+        <section class="mt-md-1 text-center">
+            <a href="index.html" class="btn btn-primary-darker checkout-btn-w100">繼續購物</a>
         </section>
 
-    </div>
+    </section>
+
+
+
+
     <footer class="bg-secondary pt-4 pb-1 mt-9">
         <div class="container">
             <div class="row text-white ml-1 ">
@@ -145,10 +146,6 @@
 
         </div>
     </footer>
-
-    <a href="" class="gotop" id="gotop" title="回頂部"></a>
-
-
     <!-- login modal -->
     <div class="modal fade bd-example-modal-lg" id="loginModal" tabindex="-1" role="dialog"
         aria-labelledby="myLargeModalLabel" aria-hidden="true">
