--- a/checkout-2.html
+++ b/checkout-2.html
@@ -68,7 +68,8 @@
                     </div>
 
                 </div>
-                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i
+                        class="fas fa-shopping-cart fa-2x"></i></a>
                 <a href="#" title="會員登入" class="order-4" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user fa-2x"></i></a>
             </nav>
@@ -90,7 +91,7 @@
     <section class="container">
         <!-- 選單 -->
         <section class="row border d-flex flex-column no-gutters">
-            <div class="col my-1 px-md-2">
+            <div class="col my-1 px-2">
                 <div class="row">
                     <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
                         <div class="form-check">
@@ -107,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col my-1 px-md-2">
+            <div class="col my-1 px-2">
                 <div class="row">
                     <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
                         <div class="form-check">
@@ -124,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col my-1 px-md-2">
+            <div class="col my-1 px-2">
                 <div class="row">
                     <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
                         <div class="form-check">
@@ -141,7 +142,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col my-1 px-md-2">
+            <div class="col my-1 px-2">
                 <div class="row">
                     <div class="col-10 d-flex flex-column flex-md-row justify-content-md-between">
                         <div class="form-check">
@@ -166,18 +167,18 @@
                     <span>共<strong class="text-danger mx-1">1</strong>件</span>
                 </div>
                 <div class="col-md-4">
-                    <div class="row">
-                        <div class="col-12 d-flex justify-content-between mb-1">
-                            <span class="d-block">商品金額</span>
-                            <span class="d-block">$1380</span>
+                    <div class="row d-flex flex-column">
+                        <div class="col d-flex mb-3">
+                            <span class="">商品金額</span>
+                            <span class="ml-auto">$1380</span>
                         </div>
-                        <div class="col-12 d-flex justify-content-between mb-1">
-                            <span class="d-block">運費小計</span>
-                            <span class="d-block">$0</span>
+                        <div class="col d-flex mb-3">
+                            <span class="">運費小計</span>
+                            <span class="ml-auto">$0</span>
                         </div>
-                        <div class="col-12 d-flex justify-content-between border-top pt-1">
-                            <span class="font-weight-bold d-block">總計</span>
-                            <span class="text-danger font-weight-bold h5 d-block"><strong>$1380</strong></span>
+                        <div class="col d-flex border-top pt-1 mb-3">
+                            <span class="font-weight-bold ">總計</span>
+                            <span class="text-danger font-weight-bold h5 ml-auto"><strong>$1380</strong></span>
                         </div>
                     </div>
                 </div>
@@ -391,9 +392,8 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
