--- a/checkout-3.html
+++ b/checkout-3.html
@@ -68,7 +68,8 @@
                     </div>
 
                 </div>
-                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i
+                        class="fas fa-shopping-cart fa-2x"></i></a>
                 <a href="#" title="會員登入" class="order-4" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user fa-2x"></i></a>
             </nav>
@@ -91,8 +92,9 @@
         <div class="">
             <p class="text-center">本次消費總計 <strong class="text-danger h5 font-weight-bold">NT$1380</strong></p>
             <p class="text-center">
-                共<strong class="text-danger font-weight-bold mx-1">2</strong>件商品 
-                <a href="#" class="checkout-list-btn" id="checkout-list-btn"><i class="fas fa-caret-down mx-1 fa-2x"></i></a>
+                共<strong class="text-danger font-weight-bold mx-1">2</strong>件商品
+                <a href="#" class="checkout-list-btn" id="checkout-list-btn"><i
+                        class="fas fa-caret-down mx-1 fa-2x"></i></a>
             </P>
             <div class="checkout-list m-auto" id="checkout-list" style="display: none; max-width: 700px;">
                 <section class="row border no-gutters">
@@ -379,9 +381,8 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
