--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                     </div>
 
                 </div>
-                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a href="checkout-1.html" title="購物車" class="mr-16 order-3"><i
+                        class="fas fa-shopping-cart fa-2x"></i></a>
                 <a href="#" title="會員登入" class="order-4" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user fa-2x"></i></a>
             </nav>
@@ -137,7 +138,8 @@
             <div class="col-md-6 d-flex justify-content-center align-items-center my-5 my-md-0">
                 <div>
                     <img src="images/t_fantasy.svg" alt="">
-                    <p class="text-secondary mt-16 ml-5 text-hover">我是天空裏的一片雲，<br>偶然投影在你的波心──<br>你不必訝異，<br>更無須歡喜──<br>在轉瞬間消滅了蹤影。
+                    <p class="text-secondary mt-16 ml-5 text-hover">
+                        我是天空裏的一片雲，<br>偶然投影在你的波心──<br>你不必訝異，<br>更無須歡喜──<br>在轉瞬間消滅了蹤影。
                     </p>
                 </div>
             </div>
@@ -159,7 +161,8 @@
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center my-5 my-md-0 pr-lg-9">
-                <p class="text-secondary text-hover">剛忘了昨兒的夢，<br>又分明看見夢裡的一笑。<br>我不知道風，是在那一個方向吹──<br>我是在夢中，<br>甜美是夢裏的光輝。</p>
+                <p class="text-secondary text-hover">剛忘了昨兒的夢，<br>又分明看見夢裡的一笑。<br>我不知道風，是在那一個方向吹──<br>我是在夢中，<br>甜美是夢裏的光輝。
+                </p>
             </div>
         </div>
     </section>
@@ -200,9 +203,12 @@
                 <div class="col-sm-12 col-md-4">
                     <span class="h5">FOLLOW US</span>
                     <ul class="list-unstyled d-flex">
-                        <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i class="fab fa-facebook-square fa-3x"></i></a></li>
-                        <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i class="fab fa-instagram fa-3x"></i></a></li>
-                        <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a></li>
+                        <li><a class="btn-icon-fb d-block mr-1" href="" title="facebook"><i
+                                    class="fab fa-facebook-square fa-3x"></i></a></li>
+                        <li><a class="btn-icon-ig d-block mr-1" href="" title="instagram"><i
+                                    class="fab fa-instagram fa-3x"></i></a></li>
+                        <li><a class="btn-icon-line d-block" href="" title="line"><i class="fab fa-line fa-3x"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -391,9 +397,8 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
